--- a/schemas/classes/classes/protobuf.properties
+++ b/schemas/classes/classes/protobuf.properties
@@ -15,14 +15,17 @@
 #      e.g. aaa/bbb/#;  aaa/bbb/ccc/#;  #;  will all match topic aaa/bbb/ccc
 #   
 
-# these two are the Solace broker Distributed Trace / Open Telemetry message formats
+
+# These two are the Solace broker Distributed Trace / Open Telemetry message formats
 # the only way to view these messages is to connect PrettyDump directly to the `#telemetry-...` queue created when
 # configuring Distributed Trace within a Message VPN.
 # Note the special wildcard char # at the end of the subscription, which will match 0-or-more levels
-
 _telemetry/broker/trace/egress/v1/# = solace.messaging.proto.broker.trace.egress.v1.EgressV1$SpanData
 _telemetry/broker/trace/receive/v1/# = solace.messaging.proto.broker.trace.receive.v1.ReceiveV1$SpanData
 
 
+# Sparkplug B spec: https://sparkplug.eclipse.org/specification/version/2.2/documents/sparkplug-specification-2.2.pdf
+# page 12 for topic definition
+spBv1.0/> = com.cirruslink.sparkplug.protobuf.SparkplugBProto$Payload
 
 
