regular check-in

--- a/schemas/classes/classes/protobuf.properties
+++ b/schemas/classes/classes/protobuf.properties
@@ -29,3 +29,11 @@ _telemetry/broker/trace/receive/v1/# = solace.messaging.proto.broker.trace.recei
 spBv1.0/> = com.cirruslink.sparkplug.protobuf.SparkplugBProto$Payload
 
 
+# OpenTelemetry OTLP Protobuf definitions, from snooping the OTel Collector -> backend (e.g. Jaeger) using HTTP Gateway mode
+# https://opentelemetry.io/docs/specs/otlp/
+# https://github.com/open-telemetry/opentelemetry-proto/blob/main/docs/specification.md
+# https://central.sonatype.com/artifact/io.opentelemetry.proto/opentelemetry-proto?smo=true
+# Microgatway mode first
+POST/v1/traces = io.opentelemetry.proto.trace.v1.TracesData
+# REST Messaging mode
+v1/traces = io.opentelemetry.proto.trace.v1.TracesData
